# gmmslam

./: .gitignore  CMakeLists.txt  README.md  benchmark_gmmslam_cpp.sh  package.xml  plot_solid_arc.py  plot_solid_yaw.py  record_slam_topics.sh  run_gmmslam_cpp.sh
cmake/: slam-config.cmake.in
config/: gmmslam.rviz  params.yaml
docker/: Dockerfile  Dockerfile.humble  Makefile  build_docker.sh  compose.yaml  patch_open3d.py  patch_open3d_colcon.py  run.sh  run_slam.sh
include/geometry_msgs/: Point.h  Pose.h  PoseStamped.h  TransformStamped.h
include/gmmslam/: config.hpp  d2d_registration.hpp  fixed_lag_backend.hpp  global_pose_graph.hpp  gmm_utils.hpp  gmmap_fitting.hpp  place_recognition.hpp  rclcpp_logging.hpp  registration_manager.hpp  ros_helpers.hpp  sogmm_fitting.hpp  solid.hpp  thread_safe_queue.hpp  types.hpp  visualizer.hpp
include/gmmslam/common/: gmm_frame.hpp
include/gmmslam/mapping/: sub_mapping.hpp
include/gmmslam/odometry/: odometry_estimation.hpp
include/gmmslam/util/: gmm_utils.hpp
include/gslam/common/: gmm_frame.hpp
include/nav_msgs/: Odometry.h  Path.h
include/ros/: console.h  ros.h
include/sensor_msgs/: Imu.h  PointCloud2.h  point_cloud2_iterator.h
include/std_msgs/: Float64MultiArray.h  String.h
include/tf2_ros/: transform_broadcaster.h
include/visualization_msgs/: Marker.h  MarkerArray.h
launch/: arc_apartment.launch  arc_big_map.launch  gmmslam.launch.py  gmmslam_cpp.launch  solid_descriptor_benchmark.launch  yaw_apartment.launch  yaw_big_map.launch
python/: d2d_registration_node.py  global_graph.py  gmm_utils.py  gmmslam.py  gmmslam_node.py  imports_setup.py  noisy_gt_publisher_node.py  plot_solid_bench.py  registration.py  ros_helpers.py  smoother.py  test_simple_gmm_reg.py  visualization.py
python/graph_scripts/: create_graphs.py  slam_loop_closure_gif.py  solid_arc_graph.py  solid_yaw_graph.py
python/launch/: gmmslam.launch
src/: config.cpp  d2d_registration.cpp  d2d_registration_node.cpp  ext_odom_publisher_node.cpp  fixed_lag_backend.cpp  global_pose_graph.cpp  gmm_utils.cpp  gmmap_fitting.cpp  gmmslam_node.cpp  noisy_gt_publisher_node.cpp  place_recognition.cpp  registration_manager.cpp  ros_helpers.cpp  sogmm_fitting.cpp  solid.cpp  visualizer.cpp
src/mapping/: global_mapping.cpp  sub_mapping.cpp
src/odometry/: gmm_d2d_registration.cpp  odometry_estimation.cpp
src/preprocess/: cloud_preprocessor.cpp  imu_integration.cpp  sogmm_fitting.cpp
src/testing/: solid_descriptor_benchmark.cpp
src/util/: gmm_utils.cpp  rtree.h
