<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gmmslam</name>
  <version>1.0.0</version>
  <description>Standalone ROS 2 SLAM with Gaussian Mixture Models</description>
  <maintainer email="arno.laurie@epfl.ch">Arno Laurie</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>

  <depend>eigen</depend>
  <depend>libyaml-cpp-dev</depend>
  <depend>libdlib-dev</depend>
  <depend>libfmt-dev</depend>
  <depend>nlohmann-json3-dev</depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
